# Add_Indexing

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: download_embedding_model.py  register_competition.py  reset_competition.py  result_competition.py
src/: app.py  competition_client.py  llm_proxy_client.py  rag.py  schemas.py
tests/: test_app.py  test_competition_client.py  test_llm_proxy_client.py  test_rag.py  test_register_competition.py  test_reset_competition.py  test_result_competition.py  test_schemas.py
